--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".AppApplication"
         android:allowBackup="true"
@@ -18,7 +19,35 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity-alias
+            android:name=".svg_launcher"
+            android:enabled="false"
+            android:icon="@drawable/ic_android_black_24dp"
+            android:label="矢量图"
+            android:targetActivity=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity-alias>
+        <activity-alias
+            android:name=".svg_olmeca"
+            android:enabled="false"
+            android:icon="@drawable/ic_olmeca"
+            android:label="olmeca"
+            android:targetActivity=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity-alias>
+
         <activity android:name=".demo.download.Download">
+        </activity>
+        <activity android:name=".demo.changeIcon.ChangeIcon">
         </activity>
     </application>
 
