增加二级联动

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,8 @@
         </activity>
         <activity android:name=".demo.changeIcon.ChangeIcon">
         </activity>
+        <activity android:name=".demo.shoppingcart.ShoppingMainActivity">
+        </activity>
     </application>
 
 </manifest>
