--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'ca.barrenechea.header-decor:header-decor:0.2.8'
 }
