--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -51,7 +51,11 @@
         </activity>
         <activity android:name=".demo.shoppingcart.ShoppingMainActivity">
         </activity>
-        <activity android:name=".demo.coordinatorLayout.CoordinatorLayoutTest">
+        <activity android:name=".demo.md.coordinatorLayout.CoordinatorLayoutTest">
+        </activity>
+        <activity android:name=".demo.md.coordinatorLayout.simple.SimpleCL">
+        </activity>
+        <activity android:name=".demo.md.coordinatorLayout.head.HideHead">
         </activity>
     </application>
 
