添加recycler的动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
         </activity>
         <activity android:name=".demo.md.coordinatorLayout.head.HideHead">
         </activity>
+        <activity android:name=".demo.md.coordinatorLayout.recycler.RecyclerViewAdd">
+        </activity>
     </application>
 
 </manifest>
