添加 MD 中的TextInputLayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
         </activity>
         <activity android:name=".demo.md.coordinatorLayout.recycler.RecyclerViewAdd">
         </activity>
+        <activity android:name=".demo.md.MaterialDesign">
+        </activity>
+        <activity android:name=".demo.md.textInputLayout.TextInputLayout">
+        </activity>
     </application>
 
 </manifest>
