添加 利用RecyclerView的分割线 做挤压效果(未完成)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
         </activity>
         <activity android:name=".demo.crypto.Crypto">
         </activity>
+        <activity android:name=".demo.recyclerDemo.RecyclerDemo">
+        </activity>
     </application>
 
 </manifest>
