--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,10 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
+RELEASE_KEY_PASSWORD=0987654321.datum
+RELEASE_KEY_ALIAS=datum
+RELEASE_STORE_PASSWORD=0987654321.key
+RELEASE_STORE_FILE=../MyKey.jks
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
