--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,32 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+
+    signingConfigs {
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.release
+        }
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -38,4 +57,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'ca.barrenechea.header-decor:header-decor:0.2.8'
     compile 'com.android.support:design:25.0.0'
+    compile files('libs/ShareSDK-Core-2.8.0.jar')
+    compile files('libs/umeng_social_api.jar')
+    compile files('libs/umeng_social_sdk.jar')
+    compile files('libs/umeng_social_net.jar')
+    compile files('libs/SocialSDK_WeiXin_Full.jar')
+    compile files('libs/libammsdk.jar')
 }
