添加recyclerView的嵌套,优化了悬浮条目的算法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -144,6 +144,10 @@
         </activity>
         <activity android:name=".demo.okioTest.OkIo">
         </activity>
+        <activity android:name=".demo.recyclerDemo.itemSpread.ItemSpread">
+        </activity>
+        <activity android:name=".demo.recyclerDemo.nested.RecyclerNested">
+        </activity>
     </application>
 
 </manifest>
