--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,14 @@ android {
             keyPassword RELEASE_KEY_PASSWORD
         }
     }
-    buildTypes {
-        debug {
-            signingConfig signingConfigs.release
-        }
-        release {
-            signingConfig signingConfigs.release
-        }
-    }
+//    buildTypes {
+//        debug {
+//            signingConfig signingConfigs.release
+//        }
+//        release {
+//            signingConfig signingConfigs.release
+//        }
+//    }
 }
 
 
@@ -46,16 +46,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.2'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'ca.barrenechea.header-decor:header-decor:0.2.8'
-    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:design:25.1.0'
     compile files('libs/ShareSDK-Core-2.8.0.jar')
     compile files('libs/umeng_social_api.jar')
     compile files('libs/umeng_social_sdk.jar')
