--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,14 @@
         </activity>
         <activity android:name=".demo.recyclerDemo.nested.RecyclerNested">
         </activity>
+        <activity
+            android:name=".demo.toolbar.ToolbarActivity"
+            android:theme="@style/AppTheme.Base">
+        </activity>
+        <activity android:name=".demo.album.AlbumActivity">
+        </activity>
+        <activity android:name=".demo.pickerView.PickerView">
+        </activity>
     </application>
 
 </manifest>
