--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     compile files('libs/SocialSDK_Sina_Simplify.jar')
     compile files('libs/SocialSDK_Sina_Full.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
 }
